--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,12 @@
     "directories": {
       "packages": "libs"
     },
+    "dependencies": {
+      "backbone": "bower:backbone@^1.2.1",
+      "backbone.localStorage": "bower:backbone.localStorage@^1.1.16",
+      "jquery": "bower:jquery@^2.1.4",
+      "underscore": "bower:underscore@^1.8.3"
+    },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
       "babel-runtime": "npm:babel-runtime@^5.1.13",
@@ -13,6 +19,9 @@
   "devDependencies": {
     "browser-sync": "^2.7.13",
     "gulp": "^3.9.0",
+    "gulp-debug": "^2.0.1",
+    "gulp-jshint": "^1.11.2",
+    "jshint-stylish": "^2.0.1",
     "jspm": "^0.15.7",
     "jspm-bower-endpoint": "^0.3.2"
   }
